<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingTop="30dp"
        android:columnCount="2"
        tools:ignore="RtlSymmetry">
        <TextView
            android:id="@+id/userID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/userID_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userid_data"
            android:textSize="22sp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="22sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/ID_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_data"
            android:textSize="22sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="22sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/title_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_data"
            android:textSize="22sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textSize="22sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/body_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_data"
            android:textSize="22sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/previous" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/next" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>